[package]
name = "blog_os"
version = "0.1.0"
authors = ["Jiahong Long <jiahong888long@gmail.com>"]
edition = "2018"

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "should_panic"
harness = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial",
"stdio", "-display", "none"]
test-success-exit-code = 33

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = {version= "0.9.8", features = ["map_physical_memory"]}
pc-keyboard = "0.5.0"
pic8259_simple = "0.2.0"
spin = "0.5.2"
volatile = "0.2.6"
uart_16550 = "0.2.0"
x86_64 = "0.13.2"
